fixes code standards

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                         <span class="text-brand-solid font-semibold uppercase">Quem Somos</span>
                         <h2 class="text-3xl md:text-4xl font-bold text-brand-dark my-4">Sobre a Red Solutions</h2>
                         <p class="text-brand-text leading-relaxed mb-4">
-                            A <strong class="font-semibold">Red Solutions</strong> (razão social: RAD COMERCIO CONSULTORIA E EVENTOS LTDA) é uma empresa dedicada a fornecer soluções estratégicas e inovadoras para negócios que buscam crescimento e otimização.
+                            A <strong class="font-semibold">Red Solutions</strong> é uma empresa dedicada a fornecer soluções estratégicas e inovadoras para negócios que buscam crescimento e otimização.
                         </p>
                         <p class="text-brand-text leading-relaxed">
                             Com uma equipe experiente, atuamos desde a consultoria empresarial, analisando e propondo melhorias, até o planejamento e execução completa de eventos corporativos que fortalecem sua marca e geram resultados.
