refactor: updates the index.html

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                     <span class="text-brand-solid font-semibold uppercase">Nossos Destaques</span>
                     <h2 class="text-3xl md:text-4xl font-bold text-brand-dark mt-4">Resultados que inspiram</h2>
                     <p class="text-lg text-brand-text mt-4">
-                        Conheça alguns dos serviços que a Red Solutions oferece.
+                        Conheça alguns dos serviços que a Red Solutions oferece
                     </p>
                 </div>
 
